<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Cylinder timer</string>

    <string name="chronometer_start">Start</string>
    <string name="chronometer_stop">Stop</string>
    <string name="chronometer_reset">Reset</string>
    <string name="chronometer_set_format">Set format string</string>
    <string name="chronometer_clear_format">Clear format string</string>
    <string name="chronometer_initial_format"> <xliff:g id="initial-format">%s</xliff:g></string>

    <string name="next">NEXT</string>
    <string name="in">In</string>
    <string name="ex">Ex</string>
    <string name="empty_data">Check all valves before</string>
    <string name="restart_error">To reset data make long click</string>
    <string name="unit">Cyl. %s</string>
    <string name="result">Result</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="results">RESULTS</string>
    <string name="double_click_exit">Please click BACK again to exit</string>
    <string name="enter_cylinder_quantity">Enter cylinder quantity*</string>
    <string name="more_then_1_cylinder">More then 1 cylinder…</string>
    <string name="you_can_change_it_in_settings">*you can change it in Settings</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="close_app">Close app</string>

</resources>
