<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="valvesQuantity"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="com.lyutyvaler4ik.inletexhaustvalvestimer.view.settingFragment.SettingFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_cylinder_quantity"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_cylinder_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:gravity="center_horizontal"
            android:hint="@string/more_then_1_cylinder"
            android:inputType="number"
            android:maxLength="2"
            android:text="@{!valvesQuantity.equals(`0`) ? valvesQuantity : ``}"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:gravity="bottom"
            android:text="@string/you_can_change_it_in_settings"
            android:textSize="12sp" />

        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>

    </LinearLayout>
</layout>