<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".view.valvesFragment.ValvesFragment">


    <TextView
        android:id="@+id/title"
        style="@style/TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        tools:text="Unit \n#1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/in"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/ex"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />


        <Chronometer
            android:id="@+id/chronometerFirstIn"
            style="@style/ChronometerStyleIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:format="@string/chronometer_initial_format"
            app:layout_constraintEnd_toStartOf="@id/chronometerFirstEx"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView" />

        <Chronometer
            android:id="@+id/chronometerFirstEx"
            style="@style/ChronometerStyleEx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:format="@string/chronometer_initial_format"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/chronometerFirstIn"
            app:layout_constraintTop_toBottomOf="@id/textView2" />

        <Chronometer
            android:id="@+id/chronometerSecondIn"
            style="@style/ChronometerStyleIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:format="@string/chronometer_initial_format"
            app:layout_constraintEnd_toStartOf="@id/chronometerSecondEx"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chronometerFirstIn" />

        <Chronometer
            android:id="@+id/chronometerSecondEx"
            style="@style/ChronometerStyleEx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:format="@string/chronometer_initial_format"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/chronometerSecondIn"
            app:layout_constraintTop_toBottomOf="@+id/chronometerFirstEx" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/next" />


</LinearLayout>